# multitenant

./: LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
account/: models.py
account/migrations/: 0001_initial.py
docs/: user_model.md
multi_tenancy/: asgi.py  settings.py  urls.py  wsgi.py
