[project]
name = "multi-tenancy"
version = "0.1.0"
description = ""
authors = [
    {name = "Noë Snaterse",email = "noe@wiredpea.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-tenants (>=3.8.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
